--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react-dom": "^18.2.17",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "prettier": "^3.1.1",
+    "prettify": "^0.1.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-confirm-alert": "^3.0.6",
