--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "rsuite": "^5.47.0",
+    "saas": "^1.0.0",
     "schema-typed": "^2.1.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -53,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.69.5"
   }
 }
